# spotify-playlists-backend

./: .gitignore  Dockerfile  pyproject.toml
utils/: localData.py  spotifyClasses.py
