[tool.poetry]
name = "spotify-playlists-backend"
version = "0.1.0"
description = ""
authors = ["Anish Shah <anish.shah.emails@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "^1.4.0"
aiohttp = "^3.7.4"
aioitertools = "^0.8.0"
altair = "^4.1.0"
appdirs = "^1.4.4"
appnope = "^0.1.2"
argon2-cffi = "^20.1.0"
astor = "^0.8.1"
astroid = "^2.7.2"
async_generator = "^1.10"
async-timeout = "^3.0.1"
attrs = "^21.2.0"
autopep8 = "^1.5.7"
backcall = "^0.2.0"
base58 = "^2.1.0"
black = "^21.7b0"
bleach = "^4.0.0"
blinker = "^1.4"
cachelib = "^0.3.0"
cachetools = "^4.2.2"
certifi = "^2021.5.30"
cffi = "^1.14.6"
chardet = "^4.0.0"
click = "^8.0.1"
debugpy = "^1.4.1"
decorator = "^5.0.9"
defusedxml = "^0.7.1"
dnspython = "^2.1.0"
entrypoints = "^0.3"
flake8 = "^3.9.2"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
Flask-Session = "^0.4.0"
flatdict = "^4.0.1"
fsspec = "^2021.7.0"
gitdb = "^4.0.7"
GitPython = "^3.1.20"
idna = "^3.2"
importlib-metadata = "^4.6.4"
ipykernel = "^6.2.0"
ipython = "^7.26.0"
ipython_genutils = "^0.2.0"
ipywidgets = "^7.6.3"
isort = "^5.9.3"
itsdangerous = "^2.0.1"
jedi = "^0.18.0"
Jinja2 = "^3.0.1"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"
jupyter-client = "^7.0.1"
jupyter-core = "^4.7.1"
jupyterlab-pygments = "^0.1.2"
jupyterlab-widgets = "^1.0.0"
lazy-object-proxy = "^1.6.0"
MarkupSafe = "^2.0.1"
mccabe = "^0.6.1"
mistune = "^0.8.4"
multidict = "^5.1.0"
mypy-extensions = "^0.4.3"
nbclient = "^0.5.4"
nbconvert = "^6.1.0"
nbformat = "^5.1.3"
nest-asyncio = "^1.5.1"
notebook = "^6.4.3"
packaging = "^21.0"
pandas = "^1.3.2"
pandocfilters = "^1.4.3"
parso = "^0.8.2"
pathspec = "^0.9.0"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = "^8.3.1"
prometheus-client = "^0.11.0"
prompt-toolkit = "^3.0.20"
protobuf = "^3.17.3"
ptyprocess = "^0.7.0"
pyarrow = "^5.0.0"
pycodestyle = "^2.7.0"
pycparser = "^2.20"
pydeck = "^0.6.2"
pyflakes = "^2.3.1"
Pygments = "^2.10.0"
pylint = "^2.10.1"
pymongo = "^3.12.0"
pyparsing = "^2.4.7"
pyrsistent = "^0.18.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.19.0"
pytz = "^2021.1"
pyzmq = "^22.2.1"
redis = "^3.5.3"
regex = "^2021.8.3"
requests = "^2.26.0"
rope = "^0.19.0"
s3fs = "^2021.8.0"
s3transfer = "^0.5.0"
Send2Trash = "^1.8.0"
six = "^1.16.0"
smmap = "^4.0.0"
spotipy = "^2.19.0"
terminado = "^0.11.1"
testpath = "^0.5.0"
toml = "^0.10.2"
toolz = "^0.11.1"
tornado = "^6.1"
tqdm = "^4.62.1"
traitlets = "^5.0.5"
typed-ast = "^1.4.3"
typing-extensions = "^3.10.0"
tzlocal = "^3.0"
urllib3 = "^1.26.6"
validators = "^0.18.2"
watchdog = "^2.1.4"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
Werkzeug = "^2.0.1"
widgetsnbextension = "^3.5.1"
wrapt = "^1.12.1"
yarl = "^1.6.3"
zipp = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
